Added OpenAPI.yml and added godotenv package
