# cmd/barcode_scanner/main.go
@@ -8,12 +8,14 @@ import (
 	"log"
 	"net/http"
 	"os"
-	"strings"
+	"path/filepath"
+	"runtime"
 	"time"
 
 	"github.com/go-chi/chi"
 	"github.com/go-chi/chi/middleware"
 	_ "github.com/go-sql-driver/mysql"
+	"github.com/joho/godotenv"
 	"github.com/lbdevwork/restapi-barcode-golang/pkg/api"
 	"github.com/lbdevwork/restapi-barcode-golang/pkg/db"
 	"github.com/lbdevwork/restapi-barcode-golang/pkg/utils"
@@ -22,6 +24,9 @@ import (
 var database *sql.DB
 
 func main() {
+
+	// Verify Env State
+	checkEnvFile()
 
 	// Create a connection to the database
 	database = connectToDatabase()
@@ -33,6 +38,7 @@ func main() {
 	// Define the routes for accessing the API
 	router := setupRouter()
 
+	// Define the port to listen on
 	port := os.Getenv("PORT")
 	if port == "" {
 		port = "8080"
@@ -43,61 +49,33 @@ func main() {
 	log.Fatal(http.ListenAndServe(":"+port, router))
 }
 
-func productHandler(w http.ResponseWriter, r *http.Request) {
-	w.Header().Set("Content-Type", "application/json")
+// Verify that the .env file exists and can be acessed
+func checkEnvFile() {
 
-	fetchProduct(w, r, func(w http.ResponseWriter, product db.Product) {
-		if product.ID == "" {
-			handleError(w, http.StatusNotFound, "Barcode not found", nil)
-			return
-		}
+	// Get the absolute path of the .env file
+	_, currentFile, _, _ := runtime.Caller(0)
+	basePath := filepath.Dir(currentFile)
+	rootPath := filepath.Join(basePath, "..", "..")
+	envPath := filepath.Join(rootPath, ".env")
 
-		json.NewEncoder(w).Encode(product)
-	})
-}
-
-func productHandlerText(w http.ResponseWriter, r *http.Request) {
-	w.Header().Set("Content-Type", "text/plain")
-
-	fetchProduct(w, r, func(w http.ResponseWriter, product db.Product) {
-		if product.ID == "" {
-			handleError(w, http.StatusNotFound, "Barcode not found", nil)
-			return
-		}
-
-		fmt.Fprintf(w, "Product ID: %s\nProduct Name: %s\nNutriscore Grade: %s\nEcoscore Grade: %s\n",
-			product.ID, product.ProductName, product.NutriscoreGrade, product.EcoscoreGrade)
-	})
-}
-
-// Handler function to return an error message as JSON
-func handleError(w http.ResponseWriter, statusCode int, message string, err error) {
-	w.WriteHeader(statusCode)
-	json.NewEncoder(w).Encode(map[string]string{"error": message})
+	// Load environment variables from .env file
+	err := godotenv.Load(envPath)
 	if err != nil {
-		log.Printf("%s: %v", message, err)
+		log.Printf("Error loading .env file: %v\n", err)
 	}
 }
 
 // Create a connection to the database
 func connectToDatabase() *sql.DB {
-	dsn := "root:@tcp(localhost:3306)/barcodes?parseTime=true" //os.Getenv("MYSQL_DSN")
+	dsn := os.Getenv("MYSQL_DSN")
+	if dsn == "" {
+		log.Fatal("MYSQL_DSN environment variable not set")
+	}
 	db, err := sql.Open("mysql", dsn)
 	if err != nil {
 		log.Fatalf("Failed to open database connection: %v\n", err)
 	}
 	return db
-}
-
-// Define the routes for accessing the API
-func setupRouter() *chi.Mux {
-	r := chi.NewRouter()
-	r.Use(middleware.Logger)
-	r.Route("/v1", func(r chi.Router) {
-		r.Get("/product/{barcode}", productHandler)
-		r.Get("/product/text/{barcode}.json", productHandlerText)
-	})
-	return r
 }
 
 // Checks if tables exist and creates them if they don't
@@ -108,15 +86,26 @@ func checkTables() {
 	}
 }
 
+// Define the routes for accessing the API
+func setupRouter() *chi.Mux {
+	r := chi.NewRouter()
+	r.Use(middleware.Logger)
+	r.Route("/v1", func(r chi.Router) {
+		r.Get("/product/{barcode}", productHandler)
+		r.Get("/product/text/{barcode}", productHandlerText)
+	})
+	return r
+}
+
+// Fetches a product from the database or the API
 func fetchProduct(w http.ResponseWriter, r *http.Request, handleResponse func(http.ResponseWriter, db.Product)) {
 	barcode := chi.URLParam(r, "barcode")
-	barcode = strings.TrimSuffix(barcode, ".json")
-
-	if barcode == "" {
-		return
-	}
 
 	barcode = utils.ConvertTo13DigitNumber(barcode)
+
+	if barcode == "" || barcode == "error" {
+		return
+	}
 
 	ctx, cancel := context.WithTimeout(r.Context(), 5*time.Second)
 	defer cancel()
@@ -144,4 +133,42 @@ func fetchProduct(w http.ResponseWriter, r *http.Request, handleResponse func(ht
 	}
 
 	handleResponse(w, product)
+}
+
+// Handles Json Endpoint Response
+func productHandler(w http.ResponseWriter, r *http.Request) {
+	w.Header().Set("Content-Type", "application/json")
+
+	fetchProduct(w, r, func(w http.ResponseWriter, product db.Product) {
+		if product.ID == "" {
+			handleError(w, http.StatusNotFound, "Barcode not found", nil)
+			return
+		}
+
+		json.NewEncoder(w).Encode(product)
+	})
+}
+
+// Handles Text Endpoint Response
+func productHandlerText(w http.ResponseWriter, r *http.Request) {
+	w.Header().Set("Content-Type", "text/plain")
+
+	fetchProduct(w, r, func(w http.ResponseWriter, product db.Product) {
+		if product.ID == "" {
+			handleError(w, http.StatusNotFound, "Barcode not found", nil)
+			return
+		}
+
+		fmt.Fprintf(w, "Product ID: %s\nProduct Name: %s\nNutriscore Grade: %s\nEcoscore Grade: %s\n",
+			product.ID, product.ProductName, product.NutriscoreGrade, product.EcoscoreGrade)
+	})
+}
+
+// Handler function to return an error message as JSON
+func handleError(w http.ResponseWriter, statusCode int, message string, err error) {
+	w.WriteHeader(statusCode)
+	json.NewEncoder(w).Encode(map[string]string{"error": message})
+	if err != nil {
+		log.Printf("%s: %v", message, err)
+	}
 }
